--- a/app/views/apps/show.html.haml
+++ b/app/views/apps/show.html.haml
@@ -1,2 +1,87 @@
-%h1 Apps#show
-%p Find me in app/views/apps/show.html.haml
+%div.ui.container
+  %div.ui.grid.divided
+    %div.four.wide.column
+      %h1
+        %i.spotify.icon
+        Spotify
+        %i.purple.external.small.icon
+    %div.six.wide.column
+      %div.ui.basic.segment
+        cdavavacdavavacdavavacdavavacdavavacda
+  %div.ui.two.column.grid
+    %div.column
+      %div.ui.basic.segment{style: 'padding: 0;'}
+        %h2
+          Flags
+          %i.info.small.blue.circle.icon.activating.element{data: {content: "Add users to your feed",position: "right center"}}
+      %div.ui.segment{style: 'padding-bottom: 3rem;'}
+        %table.ui.celled.table{style: 'margin-bottom: 1px;'}
+          %tbody
+            %tr
+              %td
+                System
+              %td
+                Admin
+              %td.positive
+                User
+              %td{style: 'background-color: lightgray;'}
+
+            %tr
+              %td.positive
+                Internet
+              %td
+                Localhost
+              %td
+                Host
+              %td{style: 'background-color: lightgray;'}
+
+            %tr
+              %td
+                Rel
+              %td.positive
+                P2P
+              %td
+                Service
+              %td
+                Prompt
+        %div.ui.bottom.right.attached.label
+          %i.check.icon
+          %i.gavel.icon
+    %div.column{style: 'padding-left: 8rem;'}
+      %div.ui.basic.segment{style: 'padding: 0;'}
+        %h2
+          Identifier
+          %i.info.small.blue.circle.icon.activating.element{data: {content: "Add users to your feed",position: "right center"}}
+      %div.ui.segments
+        %div.ui.segment
+          %div.ui.grid
+            %div.two.wide.column
+              %i.windows.big.icon{style: 'float: left;'}
+            %div.ten.wide.column
+              %p{style: 'margin: 0;'}
+                Path: C:/veqffvev
+              %p
+                id: sdvdvsvv
+          %div.ui.bottom.right.attached.label
+            %i.gavel.icon
+        %div.ui.segment
+          %div.ui.grid
+            %div.two.wide.column
+              %i.apple.big.icon{style: 'float: left;'}
+            %div.ten.wide.column
+              %p{style: 'margin: 0;'}
+                Path: C:/veqffvev
+              %p
+                id: sdvdvsvv
+          %div.ui.bottom.right.attached.label
+            %i.check.icon
+            %i.add.icon
+        %div.ui.segment
+          %div.ui.middle.aligned.grid
+            %div.two.wide.column
+              %i.big.icons{style: 'float: left;'}
+                %i.linux.icon{style: 'float: left;'}
+                %i.purple.left.corner.add.icon
+            %div.ten.wide.column
+              %h2
+                Help Us!
