--- a/app/views/data_stamps/new.html.haml
+++ b/app/views/data_stamps/new.html.haml
@@ -1,2 +1,54 @@
-%h1 DataStamps#new
-%p Find me in app/views/data_stamps/new.html.haml
+%div.ui.container
+  %h1
+    Data Stamp for
+    %i.spotify.icon
+    Spotify
+    %i.purple.external.small.icon
+  %div.ui.basic.segment
+    %div.middle.aligned.row
+      %div.column
+        %div.ui.segment{style: 'padding-bottom: 3rem;'}
+          %table.ui.celled.table{style: 'margin-bottom: 1px;'}
+            %tbody
+              %tr
+                %td
+                  %a{:href => "/"}
+                    System
+                %td
+                  %a{:href => "/"}
+                    Admin
+                %td.positive{style:' background: #A333C833 !important; color: #A333C8 !important; '}
+                  %a{:href => "/"}
+                    User
+                %td{style: 'background-color: lightgray;'}
+
+              %tr
+                %td.positive{style:' background: #A333C833 !important; color: #A333C8 !important; '}
+                  %a{:href => "/"}
+                    Internet
+                %td
+                  %a{:href => "/"}
+                    Localhost
+                %td
+                  %a{:href => "/"}
+                    Host
+                %td{style: 'background-color: lightgray;'}
+
+              %tr
+                %td
+                  %a{:href => "/"}
+                    Rel
+                %td.positive{style:' background: #A333C833 !important; color: #A333C8 !important; '}
+                  %a{:href => "/"}
+                    P2P
+                %td
+                  %a{:href => "/"}
+                    Service
+                %td
+                  %a{:href => "/"}
+                    Prompt
+          %div.ui.bottom.right.attached.label{style: 'padding: 4px;'}
+            %button.ui.purple.basic.big.button{style: "margin: 0; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+              Save
+            %button.ui.purple.basic.big.button{style: "margin: 0; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+              Cancel
