Rename creator_id db fields to user_id

--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -53,8 +53,8 @@
         %div.item
           %i.user.icon
           %div.content
-            = link_to user_path(@domain.creator_id) do
-              = @domain.creator.username
+            = link_to user_path(@domain.user_id) do
+              = @domain.user.username
         %div.item
           %i.clock.outline.icon
           %div.content
