--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -55,8 +55,9 @@
         %div.ui.grid
           - @stamp.siblings.accepted.each do |sibling|
             %div.four.wide.column
-              %h5.ui.middle.aligned.header
-                = sibling.label.name
+              = link_to stamp_path(sibling.id) do
+                %h5.ui.middle.aligned.header
+                  = sibling.label.name
             %div.twelve.wide.column
               %div.bar.float.right
                 %div.ui.purple.small.progress{style: "background: white;"}
@@ -74,8 +75,9 @@
         %div.ui.grid
           - @stamp.siblings.in_progress.each do |sibling|
             %div.four.wide.column
-              %h5.ui.middle.aligned.header
-                = sibling.label.name
+              = link_to stamp_path(sibling.id) do
+                %h5.ui.middle.aligned.header
+                  = sibling.label.name
             %div.twelve.wide.column
               %div.bar.float.right
                 %div.ui.teal.small.progress{style: "background: white;"}
