--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -2,4 +2,4 @@
 = form_for [@commentable, @comment], html: { class: 'ui reply form' } do |f|
   %div.ui.fluid.action.input
     = f.text_field :content
-    = f.button 'Add Comment', class: 'ui purple basic button', style: "box-shadow: 0px 0px 2px 2px #A333C8 inset !important;"
+    = f.button 'Add Comment', class: 'ui purple basic button'
