--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -47,7 +47,7 @@
     - if user_signed_in?
       %div.ui.basic.segment
         = link_to new_stamp_path(domain_name: @domain.name) do
-          %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+          %button.ui.purple.basic.big.button
             Add Stamp
   %div.five.wide.right.floated.column
     %div.ui.basic.segment
