--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -45,7 +45,7 @@
           = f.fields_for :comments do |c|
             = c.text_area :content
           .ui.divider
-          = f.submit 'Create Stamp', class: %w[ui purple basic big button mb0], style: 'box-shadow: 0px 0px 2px 2px #A333C8 inset !important;'
+          = f.submit 'Create Stamp', class: %w[ui purple basic big button mb0]
   %div.six.wide.right.floated.column
     - if @stamp.siblings.accepted.exists?
       %div.ui.basic.segment{style: "margin-bottom: -22px;"}
