--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -68,7 +68,7 @@
     - if user_signed_in?
       %div.ui.basic.segment{style: "padding: 0;"}
         = link_to new_stamp_path(domain_name: @stamp.domain.name) do
-          %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; ", }
+          %button.ui.purple.basic.big.button
             Add Stamp
   - unless @stamp.in_progress?
     .sixteen.wide.column
