--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -30,6 +30,6 @@
               = f.password_field :password_confirmation, autocomplete: 'off'
               %i.unlock.alternate.icon
           .field
-            = f.submit 'Sign up', class: 'ui purple basic big button', style: "padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "
+            = f.submit 'Sign up', class: 'ui purple basic big button'
 
       = render 'devise/shared/links'
