Add voting power users show

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,7 +14,7 @@
                     %div.label
                       = fa_icon 'chess-king', size: '1x'
                     %div.value
-                      &nbsp;&nbsp;4
+                      = @user.voting_power
                 %div.ui.two.wide.column.center.aligned
                   ⎮
                 %div.ui.seven.wide.column.center.aligned
@@ -29,12 +29,8 @@
 
       %div.ui.divider
       %p
-        My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
-        My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
-        My Stamp StoryMy Stamp StoryMy Stamp Story
-
-        My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
-        My Stamp StoryMy Stamp StoryMy Stamp Storyv
+        The user description will be coming - whenever 🤷🏼‍♂️.
+        It was not part of the MVP 😅
     %div.three.wide.right.floated.column
       %div.ui.basic.segment
         %div.ui.relaxed.list
