Fix typo for css class

--- a/app/views/apps/show.html.haml
+++ b/app/views/apps/show.html.haml
@@ -22,12 +22,12 @@
                 System
               %td
                 Admin
-              %td.select
+              %td.selected
                 User
               %td{style: 'background-color: lightgray;'}
 
             %tr
-              %td.select
+              %td.selected
                 Internet
               %td
                 Localhost
@@ -38,7 +38,7 @@
             %tr
               %td
                 Rel
-              %td.select
+              %td.selected
                 P2P
               %td
                 Service
