Adjust new app form to site wide styling

--- a/app/views/apps/new.html.haml
+++ b/app/views/apps/new.html.haml
@@ -33,4 +33,4 @@
               = f.check_box :windows
               = f.label :windows do
                 %i.windows.icon
-        = f.submit 'Save', class: 'ui purple big button'
+        = f.submit 'Create', class: 'ui purple basic big button'
