Add descriptions for app flags
also rename flag 'service' to 'server'

--- a/app/views/apps/show.html.haml
+++ b/app/views/apps/show.html.haml
@@ -46,7 +46,7 @@
                   Whitelist
                 %td{style: 'background-color: lightgray;'}
               %tr
-                %td{ class: ('positive' if @app.flag_stamp.service) }
+                %td{ class: ('positive' if @app.flag_stamp.server) }
                   Service
                 %td{ class: ('positive' if @app.flag_stamp.p2p) }
                   P2P
